[workspace]
resolver = "2"

default-members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

[workspace.dependencies]
blake3 = { version = "1.6.0", features = ["mmap", "rayon"] }
log = "0.4.26"
fs-err = "3.1.1"
gpt = "4.1.0"
thiserror = "2.0.11"
nix = { version = "0.30.1", features = ["fs", "mount"] }
os-info = { git = "https://github.com/AerynOS/os-info", rev = "a3f68452502c0ff2e17449449b50cd665f11173d" }
superblock = { git = "https://github.com/AerynOS/disks-rs", rev = "437299f58e19ec8dc3a6699a918ee3dbece72bd3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.6"
uuid = { version = "1.14.0", features = ["v8"] }
zstd = "0.13.3"
