[workspace]
resolver = "2"
members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
blake3 = { version = "1.6.0", features = ["mmap", "rayon"] }
log = "0.4.26"
fs-err = "3.1.1"
gpt = "4.1.0"
thiserror = "2.0.11"
nix = { version = "0.30.1", features = ["fs", "mount"] }
os-info = { git = "https://github.com/AerynOS/os-info", rev = "503a4bb97d558d8c821bcd4362d3ec06db29e0a6" }
superblock = { git = "https://github.com/AerynOS/disks-rs", rev = "0768fe553b123b2086980bc809011e9786bffd95" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.6"
uuid = { version = "1.14.0", features = ["v8"] }
zstd = "0.13.3"
