[package]
name = "blsctl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
blsforme = { path = "../blsforme" }
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
glob = "0.3"
log.workspace = true
os-info.workspace = true
pretty_env_logger = "0.5.0"
nix.workspace = true
fs-err.workspace = true
