[package]
name = "blsforme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
log.workspace = true
nix.workspace = true
os-info.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
topology = { path = "../crates/topology" }
gpt.workspace = true
fs-err.workspace = true
